Fixed RTL mega menu clipping issues identified in #1383.

--- a/src/theme-wet-boew/sass/includes/_default-desktop-images.scss
+++ b/src/theme-wet-boew/sass/includes/_default-desktop-images.scss
@@ -26,13 +26,10 @@
 		}
 	}
 
-	#wb-head {
+	[id|="wb-body"] {
 		@extend %wet-default-desktop-images-scaleX--1;
 	}
-	#wb-core {
-		@extend %wet-default-desktop-images-scaleX--1;
-	}
-	#wb-foot {
+	#wb-skip {
 		@extend %wet-default-desktop-images-scaleX--1;
 	}
 	#wet-fullhd {
@@ -46,10 +43,10 @@
 			@extend %wet-default-desktop-images-scaleX--1;
 		}
 	}
-	#wb-core-in {
+	#wb-core {
 		@extend %wet-default-desktop-images-scaleX--1;
 	}
-	#wb-foot-in {
+	#wb-foot {
 		@extend %wet-default-desktop-images-scaleX--1;
 	}
 }
